--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ base {
 }
 
 repositories {
-
+	maven { url = "https://api.modrinth.com/maven" }
 }
 
 loom {
@@ -22,17 +22,20 @@ loom {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
 		}
+		"entity_texture_features" {
+			sourceSet sourceSets.client
+		}
 	}
 
 }
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	mappings loom.officialMojangMappings()
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	modClientImplementation("maven.modrinth:entitytexturefeatures:${project.etf_version}")
 }
 
 processResources {
