--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,10 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
 
-# IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
 org.gradle.configuration-cache=false
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop
 minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
 loader_version=0.17.3
 loom_version=1.13-SNAPSHOT
 
@@ -19,3 +15,4 @@ archives_base_name=eyeframes
 
 # Dependencies
 fabric_version=0.116.7+1.21.1
+etf_version=7.0.2
